src/objects/Valid_Business_Reason_Factor__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows weather Account value Hight or Low</description>
        <label>Account Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VBR_Factor_1__c</fullName>
        <description>Valid Business Reason Factor when 1 High Contact</description>
        <label>VBR_Factor_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VBR_Factor_2__c</fullName>
        <description>Valid Business Reason Factor when we have 2 High value Contacts</description>
        <label>VBR_Factor_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VBR_Factor_3__c</fullName>
        <description>Valid Business Reason Factor when we have 3 High value Contacts</description>
        <label>VBR_Factor_3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Business_Reason_Factor__c</fullName>
        <label>Valid Business Reason Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Business_Reason__c</fullName>
        <label>Valid Business Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Valid Business Reason Factor</label>
    <listViews>
        <fullName>Valid_Business_Reason_Factor</fullName>
        <columns>Valid_Business_Reason__c</columns>
        <columns>Account_Value__c</columns>
        <columns>Valid_Business_Reason_Factor__c</columns>
        <columns>VBR_Factor_1__c</columns>
        <columns>VBR_Factor_2__c</columns>
        <columns>VBR_Factor_3__c</columns>
        <columns>VBR_FActor_4__c</columns>
        <filterScope>Everything</filterScope>
        <label>Valid Business Reason Factor</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Valid Business Reason Factors</pluralLabel>
</CustomObject>